# Horizon-Community-Edition

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Contributing.md  Dockerfile  Dockerfile.golang  Dockerfile.python  Dockerfile.rust  Horizon Community Edition.drawio  Horizon-Memory-DB.sh  README.Docker.md  README.md  SECURITY.md  TestSolarSystem.json  anim.drawio  build.rs  build.sh  compose.yaml  config.yml  continuous_load_test.db-journal  data_spatial_db  dhat-heap.json  gameServer.js  game_data.db  index.js  init-services.sh  installer-linux.sh  installers-alpine.sh  installers-arch.sh  installers-deb.sh  installers-ubuntu.sh  installers.sh  load_test.db-journal  makefile  output.txt  package-lock.json  package.json  planned-modules.md  raw_points.txt  (+4 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml
.github/workflows/: Horizon-Publish.yml  devskim.yml  docker-publish.yml  main.yml  rust.yml
.zed/: settings.json
BuntDB/: go.mod  main.go  pebbleVault.go
PebbleVault/: Cargo.toml  build.rs  go.mod  go.sum  libgo.h  main.go
PebbleVault/go/: data.db  export.go  go.mod  go.sum  main.go  pebbledb.h
PebbleVault/go/src/: modules.txt
PebbleVault/src/: lib.rs
TerraForge/src/: delaunay_triangulation.rs  fibonacci_sphere.rs
diagrams/: Horizon Community Edition.drawio  anim.drawio  instance_topology.drawio  multicast.drawio  player-plugin.drawio  playerReplicationScenarios.drawio  plugins-compile-time.drawio
go/: gen.go  go.mod  main.go
horizon-physics-engine/: Daemon.py
optional-plugins/: README.md
optional-plugins/spanish/: metadata.toml  mod.rs
pebble-vault/: Cargo.toml
pebble-vault/go/: export.go
pebble_vault/: Cargo.toml
pebble_vault/go/: pebble-vault.h
pebble_vault/src/: lib.rs
plugin-api/: Cargo.toml  build.rs  gen_uuid.sh
plugin-api/diagrams/: API.dwawio.drawio
plugin-api/src/: .lib.rs.swp  components.rs  lib.rs  lib_old.rs  plugin_imports.rs  proposal.rs
plugin_api/: Cargo.toml  build.rs
plugin_api/src/: lib.rs  plugin_imports.rs
plugin_imports/: Cargo.toml  build.rs
plugin_imports/src/: lib.rs  macros.rs
plugins/: Cargo.toml  metadata.toml
plugins/_old/core/: Cargo.toml
plugins/_old/core/src/: horizon_core.rs  startup.rs
plugins/_old/horizon_link/: Cargo.toml
plugins/_old/pebble_vault/: Cargo.toml
plugins/_old/recipe_smith/: cargo.toml
plugins/_old/stars_beyond/: Cargo.toml
plugins/_old/stars_beyond/src/: lib.rs
plugins/_old/unreal_engine/: Cargo.toml
plugins/_old/unreal_engine/src/: lib.rs
plugins/chronos_plugin/: Cargo.toml
plugins/chronos_plugin/src/: lib.rs
plugins/pebble_vault/: Cargo.toml
plugins/pebble_vault/src/: lib.rs  lib_old.rs
plugins/pebblevault_plugin/: Cargo.toml
plugins/pebblevault_plugin/src/: lib.rs
plugins/player_lib/: Cargo.toml
plugins/player_lib/src/: lib.rs
plugins/src/: lib.rs
plugins/src/core/: game_logic.rs  horizon_core.rs  leaderboard.rs  level_data.rs  logging.rs  mod.rs  notifications.rs  player_data.rs  startup.rs
plugins/src/core/actors/: actor.rs  mod.rs  object.rs  player_character.rs  staticProp.rs
plugins/src/core/chat/: chat.rs  main.rs
plugins/src/english/: metadata.toml  mod.rs
plugins/src/example/: metadata.toml
plugins/src/french/: metadata.toml  mod.rs
plugins/src/greek/: metadata.toml  mod.rs
plugins/src/horizon_link/: metadata.toml  mod.rs
plugins/src/pebble_vault/: metadata.toml  mod.rs
plugins/src/recipe_smith/: metadata.toml  mod.rs
plugins/src/recipe_smith/structs/: crafter.rs  ingredient.rs  recipe.rs  recipe_book.rs  recipe_smith.rs  storage_container.rs
plugins/src/stars_beyond/: mod.rs
plugins/src/unit_test/: metadata.toml  mod.rs
plugins/src/unreal_engine/: metadata.toml
plugins/stars_beyond/: Cargo.toml
plugins/stars_beyond/src/: lib.rs
plugins/test_plugin/: Cargo.toml
plugins/test_plugin/src/: lib.rs
plugins/unreal_adapter/: Cargo.toml
plugins/unreal_adapter/src/: lib.rs
plugins/unreal_adapter_horizon/: Cargo.toml  README.md
plugins/unreal_adapter_horizon/src/: lib.rs
server/: Cargo.toml  dhat-heap.json  server_config.json
server/src/: collision.rs  main.rs  splash.rs
server/src/server/: config.rs  mod.rs
server/src/server/event_rep/: mod.rs  structs.rs
server/src/server/vault_lib/: README.md  mod.rs
src/: .main.rs.swp  auth.rs  authority.rs  config.rs  macros.rs  main.rs  player_data.rs  players.rs  plugin_manager.rs  splash.rs  structs.rs  users.rs
src/events/: log.rs  mod.rs  server_print.rs  test.rs
src/subsystems/: actors.rs  auth.rs  chat.rs  leaderboard.rs  mod.rs  notifications.rs  player_data.rs  startup.rs
src/subsystems/PebbleVault/: Cargo.toml  README.md  build.rs
src/subsystems/PebbleVault/go/: go.mod  main.go
src/subsystems/PebbleVault/src/: MySQLGeo.rs  ffi.rs  lib.rs
src/subsystems/Recipe Smith Subsystem/: Cargo.toml
src/subsystems/Recipe Smith Subsystem/Recipe List/: recipes.CSV  recipes.Json
src/subsystems/Recipe Smith Subsystem/src/: lib.rs
src/subsystems/TerraForge/: .gitignore  Cargo.toml  README.md
src/subsystems/TerraForge/.github/workflows/: main.yml
src/subsystems/TerraForge/src/: delaunay_triangulation.rs  fibonacci_sphere.rs  lib.rs  space.rs
src/subsystems/actors/: HELP.md  README.md  actor.rs  component.rs  mod.rs  pawn.rs
src/subsystems/actors/celestial_bodies/: planet.rs
src/subsystems/core/: game_logic.rs  mod.rs
src/subsystems/core/actors/: actor.rs  main.rs
src/subsystems/recipeSmith/: Cargo.toml
src/subsystems/recipeSmith/src/: lib.rs
src/subsystems/recipe_smith/recipe_list/: recipes.CSV  recipes.Json
src/subsystems/recipe_smith/src/: lib.rs
src/subsystems/sample_sybsystem/: Cargo.toml  mod.rs
src/utilities/: actors.rs  chat.rs  delaunay.rs  events.rs  game_logic.rs  leaderboard.rs  level_data.rs  logging.rs  mod.rs  notifications.rs  planetsphere.rs  player_data.rs
src/utilities/Terra-Forge/: delaunay.rs  delaunay_triangulation.rs  fibonacci_sphere.rs  lib.rs  main.rs  planetSphere.rs
src/utilities/terra_forge/: Cargo.toml
(+11 files in other folders)
