[package]
name = "Horizon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7.5", features = ["tokio", "http1"] }
console_log = "1.0.0"
hyper = "1.3.1"
reqwest = "0.12.5"
serde = "1.0.201"
serde_json = "1.0.116"
socketioxide = "0.13.0"
tokio = { version = "1.37.0", features = ["rt", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
viz = "0.8.4"
bincode = "1.3.3"
ansi_term = "0.12.1"
TerraForge = { path = "./TerraForge" }
monoio = { version = "0.2", features = ["sync"] }
tokio-console = "0.1.11"
console-subscriber = "0.3.0"
PebbleVault = { path = "./PebbleVault" }
bindgen = "0.69.4"
http = "1.1.0"
bytes = "1.6.0"
http-body-util = "0.1.2"
mimalloc = "0.1.43"

nalgebra = "0.33.0"
v = "0.1.0"
rayon = "1.10.0"

tikv-jemallocator = "0.5.4"


[[bin]]
name = "horizon"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
