[package]
name = "Horizon"
version = "0.13.0"
edition = "2021"

[dependencies]
serde = "1.0.214"
serde_json = "1.0.128"
socketioxide = "0.15.1"
tokio = { version = "1.37.0", features = ["rt", "net", "rt-multi-thread"] }
tracing = "0.1.40"
viz = "0.9.0"
uuid = "1.10.0"
libloading = "0.8.5"
notify = "7.0.0"
horizon_data_types = "0.3.0"
plugin-api = { version = "0.3.0", path = "./plugin-api" }
rayon = "1.10.0"
horizon_logger = "0.1.0"
once_cell = "1.20.2"
serde_yaml = "0.9.34"

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "0.1.43"

[[bin]]
name = "horizon"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false



[profile.release.package."*"]
opt-level = 3
strip = true
codegen-units = 1
