[package]
name = "plugin-test-api"
version = "0.1.2"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
description = "plugin base API for the plugin-test experiment"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
horizon_data_types = { git = "https://github.com/Far-Beyond-Dev/Horizon-Data-Types", version = "0.1.1" }
tokio = { version = "1.40.0", features = ["full"] }
