[package]
name = "plugin_api"
version = "0.3.0"
authors = ["Tristan Poland <redstonecrafter126@gmail.com>"]
description = "Horizon Plugins API"
license = "MIT"
edition = "2021"

[build-dependencies]
toml_edit = "0.22.22"
pathdiff = "0.2.3"

[dependencies]
async-trait = "0.1.83"
horizon_data_types = "0.4.0"
tokio = { version = "1.41.1", features = ["rt", "net", "rt-multi-thread"] }
uuid = "1.11.0"
socketioxide = "0.15.0"
horizon-plugin-api = "0.2.0"


plugin_imports = { path = "../plugin_imports", version = "0.1.0" }
