[package]
name = "horizon-server"
version = "0.13.0"
edition = "2021"

[dependencies]
# PLUGIN API, DO NOT REMOVE
plugin_api = {path = "../plugin_api/"}

# DEFAULT DEPENDENCIES
anyhow = "1.0.93"
axum = "0.7.9"
env_logger = "0.11.5"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
socketioxide = "0.15.1"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
horizon_logger = "0.1.0" 
once_cell = "1.20.2"
horizon_data_types = "0.4.0"
rmpv = "1.3.0"
dhat = "0.3.3"
ctrlc = { version = "3.4.5", features = ["termination"] }
parking_lot = "0.12.3"
rayon = "1.10.0"
futures = "0.3.31"
PebbleVault = "0.6.1"
uuid = "1.11.0"
nalgebra = "0.33.2"
rstar = "0.12.2"

# ADD ANY CUSTOM DEPENDENCIES BELOW

# END CUSTOM DEPENDENCIES

