[package]
name = "pebblevault_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
horizon-plugin-api = "0.2.0"
horizon_data_types = "0.4.0"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
serde = { version = "1.0.130", features = ["derive"] }
uuid = "1.11.0"
PebbleVault = "0.6.2"
once_cell = "1.8.0"