[package]
name = "PebbleVault"
description = "A high performance data storage solution written in rust"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
rusqlite = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
uuid = { version = "1.9.1", features = ["v4", "serde"] }