[package]
name = "TerraForge"
description = "Lightspeed terrain generation at scale in rust"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
spade = "2.9.0"
console_log = "1.0.0"
serde = "1.0.201"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
